<resources>
    <string name="app_name">Code Challenge</string>

    <string name="content_description_backdrop">Backdrop</string>
    <string name="content_description_poster">Poster</string>

    <string name="genre">Genre</string>
    <string name="release_date">Release date</string>
    <string name="overview">Overview</string>
    <string name="search">Search</string>
    <string name="empty_filter_movie">No movie found</string>

    <string name="all_genres">All genres</string>
</resources>
