<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.moviedetail.MovieDetailActivity">

        <ImageView
            android:id="@+id/backdropImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/content_description_backdrop" />

        <ImageView
            android:id="@+id/posterImage"
            android:layout_width="80dp"
            android:layout_height="140dp"
            android:contentDescription="@string/content_description_poster"
            app:layout_constraintBottom_toBottomOf="@id/backdropImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/default_padding"
            app:layout_constraintTop_toBottomOf="@id/backdropImage">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/genreTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/genreText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_margin"
                    app:layout_constraintTop_toBottomOf="@id/genreTitleText"
                    tools:text="Science Fiction | Thriller" />

                <View
                    android:id="@+id/genreDivider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="#DDD"
                    app:layout_constraintTop_toBottomOf="@id/genreText" />

                <TextView
                    android:id="@+id/releaseDateTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/release_date"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/genreDivider" />

                <TextView
                    android:id="@+id/releaseDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_margin"
                    app:layout_constraintTop_toBottomOf="@id/releaseDateTitleText"
                    tools:text="2018-08-02" />

                <View
                    android:id="@+id/releaseDateDivider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="#DDD"
                    app:layout_constraintTop_toBottomOf="@id/releaseDateText" />

                <TextView
                    android:id="@+id/overviewTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/overview"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/releaseDateDivider" />

                <TextView
                    android:id="@+id/overviewText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_margin"
                    app:layout_constraintTop_toBottomOf="@id/overviewTitleText"
                    tools:text="After a disease kills 98% of America's children, the surviving 2% develop superpowers and are placed in internment camps. A 16-year-old girl escapes her camp and joins a group of other teens on the run from the government" />
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</ScrollView>